--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <body>
 
     <section class="bday-wrapper">
+
         <div class="alertBox">
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <strong>Happy Birthday John Simon! </strong> Wish best of luck of your goals and dreams, and I hope to
+                <strong>Happy Birthday John Simon! </strong> Wish best of luck of your goals and dreams, and I hope
+                to
                 hear your discoveries with pi <i class="fas fa-smile    "></i>! Sorry about the birthday card, it is
                 poorly styled, I am bad...
             </div>
@@ -31,34 +33,30 @@
             </script>
         </div>
 
+        <div class="container bday">
+            <div class="row">
+                <div class="mask"></div>
 
-        <div>
+                <div class="col page card-visuals">
+                    <img src="img/pi-trans.png" alt="" class="pi-img">
+                </div>
+                <div class="col page card-texts">
+                    <!-- <div class="mask"></div> -->
 
-            <div class="container bday">
-                <div class="row">
-                    <div class="mask"></div>
-
-                    <div class="col page card-visuals">
-                        <img src="img/pi-trans.png" alt="" class="pi-img">
-                    </div>
-                    <div class="col page card-texts">
-                        <!-- <div class="mask"></div> -->
-
-                        <div class="content">
-                            <h1>Happy BirthDay John</h1>
-                            <div class="msgs">
-                                <p class="msg">Hope you strong and intellegent, and <strong>enjoy math</strong>! </p>
-                                <p class="msg">I miss having you during Mathcounts, you are always the energetic and
-                                    ethusiatic person.</p>
-                                <p class="msg">I hope that you are coping well with COVID and technologies! </p>
-                                <p class="msg">I wish to discuss and work on web projects with you, and I can show you
-                                    how I made this! </p>
-                                <p class="msg"></p>
-                            </div>
-                            <p class="from">From: <strong>Jerry Ji</strong></p>
+                    <div class="content">
+                        <h1>Happy BirthDay John</h1>
+                        <div class="msgs">
+                            <p class="msg">Hope you strong and intellegent, and <strong>enjoy math</strong>! </p>
+                            <p class="msg">I miss having you during Mathcounts, you are always the energetic and
+                                ethusiatic person.</p>
+                            <p class="msg">I hope that you are coping well with COVID and technologies! </p>
+                            <p class="msg">I wish to discuss and work on web projects with you, and I can show you
+                                how I made this! </p>
+                            <p class="msg"></p>
                         </div>
-
+                        <p class="from">From: <strong>Jerry Ji</strong></p>
                     </div>
+
                 </div>
             </div>
         </div>
